feature: 修复了demo的bug