@@ -87,10 +87,7 @@ public class ElasticBeanPostProcessor implements BeanPostProcessor {
 
         //TODO 需要修改
         BlockingQueue workQueue = BlockingQueueTypeEnum.createBlockQueue(executorProperties.getWorkQueue(), executorProperties.getQueueCapacity());
-        // Java 9+ 的模块系统（JPMS）默认禁止通过反射访问 JDK 内部 API 的私有字段，所以需要配置开放反射权限
-        // 在启动命令中增加以下参数，显式开放 java.util.concurrent 包
-        // IDE 中通过在 VM options 中添加参数：--add-opens=java.base/java.util.concurrent=ALL-UNNAMED
-        // 部署的时候，在启动脚本（如 java -jar 命令）中加入该参数：java -jar --add-opens=java.base/java.util.concurrent=ALL-UNNAMED your-app.jar
+        //反射赋值
         ReflectUtil.setFieldValue(elasticExecutor, "workQueue", workQueue);
 
         // 赋值动态线程池其他核心参数
